Fix vertical alignment for imported files table

--- a/app/styles/file-imports.less
+++ b/app/styles/file-imports.less
@@ -1,3 +1,3 @@
-table.file-imports-files > tbody > tr > td {
+.table.file-imports-files > tbody > tr > td {
   vertical-align: middle;
 }
